{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 9,
  "lineage": "3589a754-2559-8244-e251-f02cecef7aab",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:network-acl/acl-0cfde55b38f3f5f95",
            "default_network_acl_id": "acl-0cfde55b38f3f5f95",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cfde55b38f3f5f95",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "204105346806",
            "subnet_ids": null,
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "Name": "my-vpc-default"
            },
            "vpc_id": "vpc-03022e5258a043b79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:route-table/rtb-0631c54bc2b438fd2",
            "default_route_table_id": "rtb-0631c54bc2b438fd2",
            "id": "rtb-0631c54bc2b438fd2",
            "owner_id": "204105346806",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "Name": "my-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03022e5258a043b79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:security-group/sg-03984888362d6995d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03984888362d6995d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "204105346806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "Name": "my-vpc-default"
            },
            "vpc_id": "vpc-03022e5258a043b79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204105346806:vpc/vpc-03022e5258a043b79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cfde55b38f3f5f95",
            "default_route_table_id": "rtb-0631c54bc2b438fd2",
            "default_security_group_id": "sg-03984888362d6995d",
            "dhcp_options_id": "dopt-0340b4b59c3e267dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03022e5258a043b79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0631c54bc2b438fd2",
            "owner_id": "204105346806",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:network-acl/acl-001aab00d34473386",
            "default_network_acl_id": "acl-001aab00d34473386",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-001aab00d34473386",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "204105346806",
            "subnet_ids": null,
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "Name": "my-vpc-default"
            },
            "vpc_id": "vpc-0b5cc2a8b06bb7feb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:route-table/rtb-0ce44791845eee1f2",
            "default_route_table_id": "rtb-0ce44791845eee1f2",
            "id": "rtb-0ce44791845eee1f2",
            "owner_id": "204105346806",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "Name": "my-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b5cc2a8b06bb7feb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:security-group/sg-0e8760d9a632a6616",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e8760d9a632a6616",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "204105346806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-default"
            },
            "tags_all": {
              "Name": "my-vpc-default"
            },
            "vpc_id": "vpc-0b5cc2a8b06bb7feb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:204105346806:vpc/vpc-0b5cc2a8b06bb7feb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-001aab00d34473386",
            "default_route_table_id": "rtb-0ce44791845eee1f2",
            "default_security_group_id": "sg-0e8760d9a632a6616",
            "dhcp_options_id": "dopt-008037c173fece309",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5cc2a8b06bb7feb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce44791845eee1f2",
            "owner_id": "204105346806",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}